--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "@types/axios": "^0.14.0",
     "@types/jest": "^27.0.1",
     "@types/node": "^16.7.13",
-    "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@types/react-redux": "^7.1.25",
     "@types/react-router-dom": "^5.3.3",
@@ -26,6 +25,7 @@
     "formik": "^2.2.9",
     "highcharts": "^10.3.3",
     "highcharts-react-official": "^3.1.0",
+    "libphonenumber-js": "^1.10.18",
     "node-sass": "^8.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
@@ -38,6 +38,7 @@
     "reselect": "^4.1.7",
     "typescript": "^4.4.2",
     "uuid": "^9.0.0",
+    "video-react": "^0.16.0",
     "web-vitals": "^2.1.0",
     "yup": "^0.32.11"
   },
@@ -64,5 +65,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react": "^18.0.27",
+    "@types/video-react": "^0.15.1"
   }
 }
